@@ -27,9 +27,9 @@ pidfile = ${buildout:parts-directory}/pound.pid
 recipe = isotoma.recipe.pound:cycle
 grace = 1
 backends =
-    /bin/true:/usr/bin/python ci-http-server.py 9080
-    /bin/true:/usr/bin/python ci-http-server.py 9081
-    /bin/true:/usr/bin/python ci-http-server.py 9082
+    127.0.0.1:9080:/bin/true:/usr/bin/python ci-http-server.py 9080
+    127.0.0.1:9081:/bin/true:/usr/bin/python ci-http-server.py 9081
+    127.0.0.1:9082:/bin/true:/usr/bin/python ci-http-server.py 9082
 wakeup =
     /
 control = ${pound:control}
